Introducing....FastBitSet